# mother-v7-improvements

./: .dockerignore  .env.production  .gitattributes  .gitignore  .pnpmfile.cjs  AI-INSTRUCTIONS-V10_TheCognitiveSingularityDirective.md  AI-INSTRUCTIONS-V11_TheProduction-ReadyCognitiveSingularityDirective.md  AI-INSTRUCTIONS-V7.md  AI-INSTRUCTIONS-V8.md  AI-INSTRUCTIONS.md  ANALISE-COMPLETA-MOTHER-V12-FINAL.md  API-KEY-FIX-FINAL-REPORT.md  AUDIT-REPORT-V14.md  AWAKE-V114-MOTHERv69.14_Ciclo32_BugFix_ChatEmpty_DGMProposals.md  AWAKE-V115-MOTHERv69.14_Ciclo33_MassTests_FineTuning_QualityPlan.md  AWAKE-V119-MOTHERv70.0_ProducaoCompleta_CredenciaisSQL_Deploy_ManutencaoProtocol.md  AWAKE-V145-MOTHERv75.1_SelfAudit_CacheBypass_ScientificBenchmarks.md  AWAKE-V19.md  AWAKE-V20.md  AWAKE-V21.md  AWAKE-V22.md  AWAKE-V227-MOTHERv80.4_Ciclo125_DGMLoop_Fase3Completa_425Regras_FINAL.md  AWAKE-V229-MOTHERv81.0_Ciclo145_Fase5_InterfaceManus_475Regras_FINAL.md  AWAKE-V23.md  AWAKE-V230-MOTHERv81.0_Ciclo145_Fase5COMPLETA_500Regras_FINAL.md  AWAKE-V25.md  AWAKE-V253-MOTHERv81.8_Ciclo178_SprintResults.md  AWAKE-V254-MOTHERv81.8_Ciclo179.md  AWAKE-V255-MOTHERv81.8_Ciclo180_VisaoCorrigida.md  AWAKE-V256-MOTHERv81.8_Ciclo180_VisaoDefinitiva.md  AWAKE-V265-MOTHERv81.8_Ciclo187_Phase3_LSTM_DGMSprint9.md  AWAKE-V267-MOTHERv105.0_Ciclo193_C218-C220_Phase4Producao.md  AWAKE-V268-MOTHERv110.0_Ciclo194_C221_Chain1Validated.md  AWAKE-V27.md  AWAKE-V270-MOTHERv120.0_Ciclo230_C223-C230_ConselhoV98.md  AWAKE-V28.md  AWAKE-V29.md  AWAKE-V309-MOTHERv122.20_Ciclo320_ConselhoFinal_Roadmap_C321-C323.md  AWAKE-V30_TheCognitiveEra.md  AWAKE-V311-MOTHERv122.22_CicloC326_RoadmapC324-C326_2026-03-12.md  (+351 more)
.claude/: settings.local.json
client/: index.html
datasets/: generate_lanl_icold.py  geval_calibration.py  train_lstm_regression.py
docs/: AUDIT-V57-SCIENTIFIC-REPORT.md  (+27 more)
sdk/python/: README.md  pyproject.toml
sdk/python/mother_sdk/: __init__.py  client.py  exceptions.py  models.py
(+1052 files in other folders)
